# DataScaler

./: README.md  pyproject.toml  ruff.toml
scripts/: eval.py  generate_pools.sh  run_eval.sh  run_eval_ensemble.sh  scaling_law.ipynb  setup.sh  signal_integration.ipynb  tasklist.yml  tasklist_subset.yml  train_with_ensemble.sh  train_with_grid_search.sh
